# microcodes-cli

./: Cargo.toml  LICENSE  README.md  api.json  example-submit.json  install.ps1  install.sh
.github/workflows/: release.yml
example-multi-submit/: README.md  another_example.py  example.java  example.py  meta.json
src/: main.rs  tui.rs
