[package]
name = "microcodes"
version = "0.2.1"
edition = "2021"
description = "CLI for the Microcodes API"
license = "MIT"

[[bin]]
name = "microcodes"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "3.1.1"
